--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ ext {
             rxjava              : "2.0.1",
             rxandroid           : "2.0.1",
             retrofit            : "2.1.0",
+            retrofit_adapter    : "2.2.0",
             butterknife         : "8.5.1",
             javax_annotation    : "1.0",
             glide               : "3.7.0",
@@ -35,7 +36,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:2.3.0'
         classpath 'com.frogermcs.androiddevmetrics:androiddevmetrics-plugin:0.4'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
